fix mobile timeline years size and alignment

--- a/src/components/caterHistoryNews/caterHistoryNews.css
+++ b/src/components/caterHistoryNews/caterHistoryNews.css
@@ -587,17 +587,17 @@
 .cHN-historyBlock-lineContain-years{
     width: 42px;
     font-family: 'Open Sans', sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
     color:#d53717;
     padding-left: 22px;
 }
 #cHN-historyBlock-lineContain-years-1{
-    margin-top: -5px;
+    margin-top: -4px;
 }
 #cHN-historyBlock-lineContain-years-2{
-    padding-top: 148px;
-    padding-bottom: 173px;
+    padding-top: 151px;
+    padding-bottom: 175px;
 }
 
 .cHN-historyBlock-lineContain-line{
